<resources>
    <string name="app_name">DishDash</string>
    <string name="hi">Hi!</string>
    <string name="welcome_message">What are you cooking today</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="add_to_calender">add to calender</string>
    <string name="guest">Guest.</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="more_recipes">More Recipes</string>
    <string name="details">Details</string>
    <string name="recipe_details">Recipe details</string>
    <string name="meal_title">Meal title</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or_register_by">Or Register by</string>
    <string name="register_with_google">Register with google</string>
    <string name="register_with_facebook">Register with facebook</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="google">Google</string>
    <string name="or_login_with">Or Login with</string>
    <string name="does_not_have_account">Does not have account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="fill_email">Fill email!</string>
    <string name="not_valid_email_address">Not valid Email Address!</string>
    <string name="fill_password">Fill password!</string>
    <string name="short_password_length">Short password length!</string>
    <string name="password_not_matches">Password not matches</string>
    <string name="fill_username">Fill Username!</string>
    <string name="fill_confirm_password">Fill confirm password</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="you_are_not_logged_in">You are not logged in!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="dismiss">Dismiss</string>
    <string name="you_are_not_connected">You are not Connected</string>
    <string name="are_sure_you_want_to_remove_this_meal_from_favorites">Are sure you want to remove this meal from favorites!</string>
    <string name="are_sure_you_want_to_logout">Are sure you want to Logout!</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_meal_removed">Favorite Meal Removed!</string>
    <string name="adding_to_favorite_error">Adding to Favorite Error!</string>
    <string name="failed_to_remove_favorite_meal">Failed to remove Favorite Meal!</string>
    <string name="there_are_no_favorite_meals">There are no Favorite Meals!</string>
    <string name="data_synced">Data synced!</string>
    <string name="failed_to_sync_data">Failed To Sync Data</string>
    <string name="added_to_future_planes">Added to Future planes!</string>
    <string name="failed_to_add_to_future_planes">Failed added to Future planes</string>
    <string name="delete_future_plane">Delete future plane.</string>
    <string name="failed_to_load_future_planes">Failed to load Future Planes!</string>
    <string name="deleted">Deleted!</string>
    <string name="are_sure_you_want_to_remove_this_meal_from_planes">Are sure you want to remove this meal from planes!</string>
    <string name="already_exists_in_this_day">Already Exists in this day!</string>
    <string name="planes">Planes</string>
    <string name="yes">Yes</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meals">Meals</string>
    <string name="hello">Hello,</string>
    <string name="ok">Ok</string>
    <string name="no_meal_with_this_name">No meal with this name.</string>
</resources>