<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favorites_icon"
        android:title="@string/favorites" />
    <item
        android:id="@+id/calenderFragment"
        android:icon="@drawable/calender_icon"
        android:title="@string/calender" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>