<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mustafa.dishdash.home.HomeFragment"
        android:label="@string/home" >
        <action
            android:id="@+id/action_homeFragment_to_recipeDetailsFragment2"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/calenderFragment"
        android:name="com.mustafa.dishdash.home.CalenderFragment"
        android:label="@string/calender"
        tools:layout="@layout/fragment_calender" >
        <action
            android:id="@+id/action_calenderFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mustafa.dishdash.home.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.mustafa.dishdash.home.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mustafa.dishdash.home.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.mustafa.dishdash.home.RecipeDetailsFragment"
        android:label="fragment_recipe_details"
        tools:layout="@layout/fragment_recipe_details" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>