<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.profile.view.ProfileFragment">

    <TextView
        android:id="@+id/profile"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/default_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        style="@style/text_title"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/user_image"
        app:layout_constraintStart_toStartOf="@+id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        style="@style/sub_title"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/txtUsername"
        app:layout_constraintStart_toStartOf="@+id/txtUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        tools:text="@string/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <include
        android:id="@+id/not_logged_in_group"
        layout="@layout/not_logged_in_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>