<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.RecipeDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/random_meal_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtMealName"
                    style="@style/text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/on_primary"
                    app:layout_constraintEnd_toStartOf="@+id/add_to_favorite"
                    app:layout_constraintStart_toEndOf="@+id/add_to_calender"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/meal_title" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/instructions_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMealName"
                    app:shapeAppearanceOverlay="@style/rounded_image_corner"
                    tools:srcCompat="@drawable/default_image" />

                <ImageView
                    android:id="@+id/add_to_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/add_to_favorites"
                    app:layout_constraintBottom_toBottomOf="@+id/txtMealName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_to_favorite" />

                <ImageView
                    android:id="@+id/add_to_calender"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/add_to_calender"
                    app:layout_constraintBottom_toBottomOf="@+id/txtMealName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtMealName"
                    app:srcCompat="@drawable/add_to_calendar" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/meal_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="@+id/random_meal_card"
            app:layout_constraintStart_toStartOf="@+id/random_meal_card"
            app:layout_constraintTop_toBottomOf="@+id/random_meal_card" />

        <TextView
            android:id="@+id/instructions_title"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="@+id/meal_tags"
            app:layout_constraintTop_toBottomOf="@+id/meal_tags" />

        <TextView
            android:id="@+id/meal_instructions"
            style="@style/sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/random_meal_card"
            app:layout_constraintStart_toStartOf="@+id/instructions_title"
            app:layout_constraintTop_toBottomOf="@+id/instructions_title"
            tools:text="@string/details" />


        <TextView
            android:id="@+id/ingredients_title"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="@+id/meal_tags"
            app:layout_constraintTop_toBottomOf="@+id/meal_instructions" />

        <LinearLayout
            android:id="@+id/ingredients_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/meal_instructions"
            app:layout_constraintStart_toStartOf="@+id/meal_instructions"
            app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/ingredients_container"
            app:layout_constraintStart_toStartOf="@+id/ingredients_container"
            app:layout_constraintTop_toBottomOf="@id/ingredients_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>